Fri Jul 27 10:56:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/DAnCE.doxygen:
          Generate UML diagrams, assume stl is buildin

Thu Jul 26 16:31:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/DAnCE.doxygen:
          Upgraded with doxygen -u

        * tools/Logger_Backend/ndds/Log_Backend.h:
          Doxygen fix

Thu Jul 26 09:31:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

        * etc/DAnCE.doxygen:
          Removed deprecated tag

Thu Jul 26 09:12:26 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.1.3 released.

Thu May 31 17:18:44 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/ExecutionManager/ExecutionManager.mpc:
          Zapped tabs

        * tests/DeploymentPlanDump/test.cpp:
        * tests/DeploymentPlanTestReferences/test.cpp:
        * tests/DeploymentTest1/test.cpp:
        * tests/Parsing/domain.cpp:
        * tests/Parsing/test.cpp:
          Updated includes

Thu May 31 12:31:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/Deployment.cpp:
        * tools/Config_Handlers/Deployment.hpp:
        * tools/Config_Handlers/Utils/Functors.h:
        * tools/Config_Handlers/XMI.cpp:
        * tools/Config_Handlers/XMI.hpp:
        * tools/Config_Handlers/XML_File_Intf.cpp:
        * tools/Config_Handlers/ccd.cpp:
        * tools/Config_Handlers/ccd.hpp:
        * tools/Config_Handlers/cdd.hpp:
        * tools/Config_Handlers/cdd.cpp:
        * tools/Config_Handlers/cdp.cpp:
        * tools/Config_Handlers/cdp.hpp:
        * tools/Config_Handlers/cid.hpp:
        * tools/Config_Handlers/cid.cpp:
        * tools/Config_Handlers/cpd.cpp:
        * tools/Config_Handlers/cpd.hpp:
        * tools/Config_Handlers/iad.cpp: